# wave_function_collapse

./: .gitignore  CMakeLists.txt  README.md
resources/: color_tiles_generator.py  entropy_tiles_generator.py
src/: main.c
wfclib/: CMakeLists.txt
wfclib/include/: wfclib.h  wfclib_api.h  wfclib_stack.h
wfclib/src/: wfclib.c  wfclib_stack.c  wfclib_utils.c
